program committee add view kayinju

--- a/earts/templates/subadmintemplates/sadmin_home.html
+++ b/earts/templates/subadmintemplates/sadmin_home.html
@@ -23,6 +23,16 @@
             <a href="/earts/sadmin_viewjudgesload/">View Judges</a>
         </td>
     </tr>
+     <tr>
+        <td>
+            <a href="/earts/sadmin_addprogramcommitteeload/">Add Program Committee</a>
+        </td>
+    </tr>
+      <tr>
+        <td>
+            <a href="/earts/sadmin_viewprogramcommitteeload/">View Program Committee</a>
+        </td>
+    </tr>
     <tr><th><a href="/earts/loginload/">LOG OUT</a></th>
 </tr>
 </table>
