search , add programs

--- a/earts/templates/admintemplates/admin_view_SubAdmin.html
+++ b/earts/templates/admintemplates/admin_view_SubAdmin.html
@@ -5,7 +5,7 @@
 <title>Untitled Document</title></head>
 
 <body>
-<form id="form1" name="form1" method="post" action="">
+<form id="form1" name="form1" method="post" action="/earts/admin_viewsubadminload/">
   <table width="221" border="1">
     <tr>
       <th colspan="10" scope="col">Sub&nbsp;Admin&nbsp;Name </th>
