--- a/earts/templates/judgestemplates/judges_view_profile.html
+++ b/earts/templates/judgestemplates/judges_view_profile.html
@@ -5,39 +5,39 @@
 <title>S_ADMIN PROFILE</title>
 </head>
 <body>
-<form action="/earts/sadmin_home/">
+<form>
 <table width="889" border="1">
   <tr>
     <td colspan="3">PROFILE</td>
     </tr>
   <tr>
     <td width="100">Name:</td>
-    <td width="584" >&nbsp;{{ a.subadmin_name }}</td>
+    <td width="584" >&nbsp;</td>
     <td width="183" rowspan="8">&nbsp;</td>
   </tr>
   <tr>
     <td>Gender:</td>
-    <td>{{ a.gender }}</td>
+    <td></td>
     </tr>
   <tr>
     <td>Place:</td>
-    <td>{{ a.place }}</td>
+    <td></td>
     </tr>
   <tr>
     <td>PIN:</td>
-    <td>{{ a.pin }}</td>
+    <td></td>
     </tr>
   <tr>
     <td>Post:</td>
-    <td>{{ a.post }}</td>
+    <td></td>
     </tr>
   <tr>
     <td>District:</td>
-    <td>{{ a.district }}</td>
+    <td></td>
     </tr>
   <tr>
     <td>E-mail:</td>
-    <td>{{ a.email }}</td>
+    <td></td>
     </tr>
   <tr>
     <td colspan="2"><input name="Back" type="button" value="Back" /></td>
