--- a/earts/templates/subadmintemplates/sadmin_home.html
+++ b/earts/templates/subadmintemplates/sadmin_home.html
@@ -32,7 +32,12 @@
         <td>
             <a href="/earts/sadmin_viewprogramcommitteeload/">View Program Committee</a>
         </td>
+     <tr>
+        <td>
+            <a href="/earts/sadmin_addprogramsload/">Add Programs</a>
+        </td>
     </tr>
+
     <tr><th><a href="/earts/loginload/">LOG OUT</a></th>
 </tr>
 </table>
