--- a/earts/templates/admintemplates/admin_view_Course.html
+++ b/earts/templates/admintemplates/admin_view_Course.html
@@ -5,7 +5,8 @@
 <title>Untitled Document</title>
 </head>
 
-<body><form action="submit"><table width="316" border="1">
+<body>
+ <form action="/earts/admin_viewcourseload/" method="post"><table width="316" border="1">
   <tr>
     <th colspan="3" scope="col"><p>CourseName&nbsp;
 
