--- a/earts/templates/admintemplates/admin_view_Events.html
+++ b/earts/templates/admintemplates/admin_view_Events.html
@@ -5,7 +5,7 @@
 <title>Untitled Document</title>
 </head>
 
-<body><form action="submit"><table width="316" border="1">
+<body><form action="/earts/admin_vieweventsload/" method="post"><table width="316" border="1">
   <tr>
     <th colspan="3" scope="col"><p>Event&nbsp;Name&nbsp;
       
