--- a/earts/templates/admintemplates/admin_view_staff.html
+++ b/earts/templates/admintemplates/admin_view_staff.html
@@ -5,7 +5,7 @@
 <title>Untitled Document</title></head>
 
 <body>
-<form id="form1" name="form1" method="post" action="">
+<form id="form1" name="form1" method="post" action="/earts/admin_viewstaffload/">
   <table width="200" border="1">
     <tr>
       <th colspan="8" scope="col">Staff&nbsp;name </th>
