--- a/earts/templates/subadmintemplates/sadmin_view_events.html
+++ b/earts/templates/subadmintemplates/sadmin_view_events.html
@@ -4,7 +4,7 @@
 <title>Untitled Document</title>
 </head>
 
-<body><form action="submit"><table width="316" border="1">
+<body><form action="/earts/sadmin_vieweventsload/" method="post"><table width="316" border="1">
   <tr>
     <th colspan="3" scope="col"><p>Event&nbsp;Name&nbsp;
       
