--- a/earts/templates/subadmintemplates/sadmin_view_judges.html
+++ b/earts/templates/subadmintemplates/sadmin_view_judges.html
@@ -5,7 +5,7 @@
 <title>Untitled Document</title></head>
 
 <body>
-<form id="form1" name="form1" method="post" action="">
+<form id="form1" name="form1" method="post" action="/earts/sadmin_viewjudgesload/">
   <table width="200" border="1">
     <tr>
       <th colspan="8" scope="col">Judges&nbsp;name </th>
