--- a/earts/templates/subadmintemplates/sadmin_home.html
+++ b/earts/templates/subadmintemplates/sadmin_home.html
@@ -37,6 +37,11 @@
             <a href="/earts/sadmin_addprogramsload/">Add Programs</a>
         </td>
     </tr>
+     <tr>
+        <td>
+            <a href="/earts/sadmin_viewprogramsload/">View Programs</a>
+        </td>
+    </tr>
 
     <tr><th><a href="/earts/loginload/">LOG OUT</a></th>
 </tr>
