--- a/earts/templates/participants_studentstemplates/student_view_profile.html
+++ b/earts/templates/participants_studentstemplates/student_view_profile.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>S_ADMIN PROFILE</title>
+<title>STUDENT PROFILE</title>
 </head>
 <body>
 <form>
