--- a/earts/templates/subadmintemplates/sadmin_view_profile.html
+++ b/earts/templates/subadmintemplates/sadmin_view_profile.html
@@ -40,7 +40,7 @@
     <td>{{ a.email }}</td>
     </tr>
   <tr>
-    <td colspan="2"><input name="Back" type="button" value="Back" /></td>
+    <td colspan="2"><input name="Back" type="submit" value="Back" /></td>
     </tr>
 </table>
 </form>
