--- a/earts/templates/admintemplates/admin_home.html
+++ b/earts/templates/admintemplates/admin_home.html
@@ -28,7 +28,7 @@
     </tr>
     <tr>
         <td><a href="/earts/admin_viewprogramcommitteeload/">View Program Committee </a></td>
-        <td><a href="/earts/admin_viewjudgingpanelload/">View Judging Panel</a></td>
+        <td><a href="/earts/admin_viewjudgesassgnload/">View Judges Assigns</a></td>
     </tr>
     <tr>
         <td><a href="/earts/admin_viewcommentsreplyload/">View Complaints & Reply</a></td>
