--- a/earts/templates/participants_studentstemplates/student_upload_program.html
+++ b/earts/templates/participants_studentstemplates/student_upload_program.html
@@ -10,7 +10,13 @@
 <table width="200" border="1">
   <tr>
     <th>Program&nbsp;Name</th>
-    <td><input type="text" name="textfield" value="{{  }}"/></td>
+    <td>{{ progobj.program_name }}</td>
+
+  </tr>
+   <tr>
+    <th>Perfomance&nbsp;Name</th>
+    <td><input name="text1" type="text"/></td>
+    
   </tr>
   <tr>
     <tH>Upload</th>
@@ -31,6 +37,10 @@
 <table width="200" border="1">
   <tr>
     <th>Program&nbsp;Name</th>
+    <th>&nbsp;</th>
+  </tr>
+  <tr>
+    <th>Perfomance&nbsp;Name</th>
     <th>&nbsp;</th>
   </tr>
   <tr>
