--- a/earts/templates/subadmintemplates/sadmin_home.html
+++ b/earts/templates/subadmintemplates/sadmin_home.html
@@ -40,6 +40,15 @@
      <tr>
         <td>
             <a href="/earts/sadmin_viewprogramsload/">View Programs</a>
+        </td></tr>
+    <tr>
+         <td>
+            <a href="/earts/sadmin_viewjudgesassgnload/">View Judges Assigned</a>
+        </td>
+    </tr>
+     <tr>
+         <td>
+            <a href="/earts/sadmin_viewparticipants/">View Participants</a>
         </td>
     </tr>
 
