judges view assigned program

--- a/earts/templates/judgestemplates/judges_home.html
+++ b/earts/templates/judgestemplates/judges_home.html
@@ -10,7 +10,7 @@
         <td><a href="/earts/judges_viewprofileload/">Profile</a></td>
     </tr>
      <tr>
-        <td><a href="/earts/judges_viewprogramsload/">View Programs</a></td>
+        <td><a href="/earts/judges_viewprogramsload/">View My Programs</a></td>
     </tr>
 
 
