--- a/earts/templates/judgestemplates/judges_view_programs.html
+++ b/earts/templates/judgestemplates/judges_view_programs.html
@@ -27,6 +27,7 @@
       <td>{{ i.PROGRAMS.program_name }}&nbsp;</td>
       <td>{{ i.PROGRAMS.program_discription}}&nbsp;</td>
     <td colspan="2" >{{i.EVENTS.event_name}}</td>
+    <td colspan="2" >{{i.EVENTS.event_name}}</td>
   </tr>
     {% endfor %}
 </table>
