--- a/earts/templates/judgestemplates/judges_view_participants.html
+++ b/earts/templates/judgestemplates/judges_view_participants.html
@@ -23,7 +23,7 @@
       <td>{{ i.STUDENT.student_name }}</td>
       <td>{{ i.status }}</td>
       <td>{{ i.requested_date }}</td>
-      <td><a href="/earts/procommittee_approveload/{{ i.id }}">Approve</a></td>
+      <td><a href="/earts/judges_viewperfomanceload/{{ i.id }}"> View Perfomance</a></td>
     </tr>
       {% endfor %}
   </table>
