--- a/earts/templates/login.html
+++ b/earts/templates/login.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <!-- Design by foolishdeveloper.com -->
-    <title>Glassmorphism login Form Tutorial in html css</title>
+    <title>Login To E-arts</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -35,8 +35,9 @@ body{
 }
 .shape:first-child{
     background: linear-gradient(
-        #1845ad,
-        #23a2f6
+        to left,
+        #0014ff,
+        #f60018
     );
     left: -80px;
     top: -80px;
@@ -44,8 +45,8 @@ body{
 .shape:last-child{
     background: linear-gradient(
         to right,
-        #ff512f,
-        #f09819
+        #15ff00,
+        #00e4f0
     );
     right: -30px;
     bottom: -80px;
@@ -72,7 +73,7 @@ form *{
     border: none;
 }
 form h3{
-    font-size: 32px;
+    font-size: 24px;
     font-weight: 500;
     line-height: 42px;
     text-align: center;
