--- a/earts/templates/programcommitteetemplates/procommitte_view_programs.html
+++ b/earts/templates/programcommitteetemplates/procommitte_view_programs.html
@@ -30,6 +30,7 @@
       <td><a href="/earts/procommittee_viewparticipants/{{ i.id }}">View Participants</a></td>
       <td><a href="/earts/procommittee_assignjudgesload/{{ i.id }}">Assign Judges</a></td>
       <td><a href="/earts/procommittee_scheduleprogload/{{ i.id }}">Schedule Program</a></td>
+      <td><a href="/earts/procommittee_viewperfomanceload/{{ i.id }}">View Perfomances</a></td>
 
   </tr>
     {% endfor %}
