--- a/earts/templates/programcommitteetemplates/procommittee_view_perfomance2.html
+++ b/earts/templates/programcommitteetemplates/procommittee_view_perfomance2.html
@@ -5,18 +5,16 @@
 <title>Untitled Document</title>
 </head>
 
-<body><form action="/earts/sadmin_viewperfomance1/" method="post">  <table width="407" border="0">
+<body><form action="/earts/procommittee_viewperfomanceload/" >  <table width="407" border="0">
 
 <tr>
     <th width="173">Perfomance&nbsp;Name</th>
     <td width="218">{{ viewdata.performance_name }}</td>
   </tr>
   <tr>
-    <td  colspan="2"><img src="{{ viewdata.uploaded_files }}" width="500" height="350" ></td>
+    <td  colspan="2"><img src="{{ viewdata.uploaded_files }}" height="400" width="450" ></td>
     </tr>
-	 <tr>
-    <td  colspan="2"><button name="back" type="submit">Back</button></td>
-    </tr>
+
 </table>
 </form>
 </body>
