--- a/earts/templates/subadmintemplates/sadmin_home.html
+++ b/earts/templates/subadmintemplates/sadmin_home.html
@@ -51,6 +51,11 @@
             <a href="/earts/sadmin_viewparticipants/">View Participants</a>
         </td>
     </tr>
+     <tr>
+         <td>
+            <a href="/earts/sadmin_viewperfomance1/">View Perfomances</a>
+        </td>
+    </tr>
 
     <tr><th><a href="/earts/loginload/">LOG OUT</a></th>
 </tr>
