--- a/earts/templates/Change_pass.html
+++ b/earts/templates/Change_pass.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<form id="form1" name="form1" method="post" action="submit">
+<form id="form1" name="form1" method="post" action="/earts/changepasswordpost/">
 
   <table width="200" border="1" align="center">
     <tr>
