--- a/earts/templates/judgestemplates/judges_view_programs.html
+++ b/earts/templates/judgestemplates/judges_view_programs.html
@@ -27,8 +27,8 @@
       <td>{{ i.PROGRAMS.program_name }}&nbsp;</td>
       <td>{{ i.PROGRAMS.program_discription}}&nbsp;</td>
     <td colspan="2" >{{i.EVENTS.event_name}}</td>
-    <td colspan="2" >{{i.EVENTS.event_name}}</td>
-  </tr>
+    <td><a href="/earts/judges_viewparticipantsload/{{ i.PROGRAMS_id }}"> View Participants</a></td>
+      </tr>
     {% endfor %}
 </table>
 
