--- a/earts/templates/programcommitteetemplates/procommittee_view_perfomance.html
+++ b/earts/templates/programcommitteetemplates/procommittee_view_perfomance.html
@@ -5,8 +5,7 @@
 <title>Untitled Document</title>
 </head>
 
-<body>
-<form id="form1" name="form1" method="post" action="/earts/sadmin_viewprogramsload/"><table width="767" border="0">
+<body><table>
   <tr>
     <th colspan="2">Programs </th>
     <th colspan="2">Program&nbsp;name:&nbsp; <input name="textfield" type="text" /> </th>
@@ -24,11 +23,10 @@
       <td>{{ i.PROGRAMS.program_name }}&nbsp;</td>
       <td>{{ i.PARTICIPANTS.STUDENT.student_name }}</td>
       <td>{{ i.performance_name }} </td>
-      <td><a href="/earts/sadmin_viewperfomance2/{{ i.id }}">View</a></td>
+      <td><a href="/earts/procommittee_viewperfomance2/{{ i.id }}">View</a></td>
   </tr>
     {% endfor %}
 </table>
 
-</form>
 </body>
 </html>
