--- a/earts/templates/admintemplates/admin_home.html
+++ b/earts/templates/admintemplates/admin_home.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'admintemplates/index.html' %}
+
+{% block body %}
+
 <table border="3">
     <tr>
         <td><a href="/earts/admin_addsubadminload/">Add Subadmin</a></td>
@@ -38,5 +35,4 @@
         <th> <a href="/earts/loginload/">LOG OUT</a></th>
     </tr>
 </table>
-</body>
-</html>
+{% endblock %}
