--- a/earts/templates/admintemplates/admin_home.html
+++ b/earts/templates/admintemplates/admin_home.html
@@ -4,7 +4,7 @@
 
 <table border="3">
     <tr>
-        <td><a href="/earts/admin_addsubadminload/">Add Subadmin</a></td>
+{#        <td><a href="/earts/admin_addsubadminload/">Add Subadmin</a></td>#}
         <td><a href="/earts/admin_viewsubadminload/">View Subadmin</a></td>
     </tr>
     <tr>
