--- a/earts/templates/admintemplates/admin_add_SubAdmin.html
+++ b/earts/templates/admintemplates/admin_add_SubAdmin.html
@@ -1,69 +1,65 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Untitled Document</title>
-</head>
+{% extends 'admintemplates/index.html' %}
 
-<body>
+
+{% block body %}
 <form action="/earts/admin_addsubadminpost/" method="post" enctype="multipart/form-data" name="form1" id="form1">
-  <table width="200" border="1">
-    <tr>
-      <th scope="col"><div align="left">Subadmin&nbsp;Name </div></th>
-      <td scope="col"><label>
-        <input type="text" name="textfield" />
-      </label></td>
-    </tr>
-    <tr>
-      <td>Gender</td>
-      <td>
-        <input name="r1" type="radio" value="male" />
-        Male 
-        <input name="r1" type="radio" value="female" />
-      Female</label></td>
-    </tr>
-    <tr>
-      <td>Place</td>
-      <td><label>
-        <input type="text" name="textfield1" />
-      </label></td>
-    </tr>
-    <tr>
-      <td>PIN</td>
-      <td><label>
-        <input type="text" name="textfield2" />
-      </label></td>
-    </tr>
-    <tr>
-      <td>Post</td>
-      <td><label>
-        <input type="text" name="textfield3" />
-      </label></td>
-    </tr>
-    <tr>
-      <td>District</td>
-      <td><label>
-        <input type="text" name="textfield4" />
-      </label></td>
-    </tr>
-    <tr>
-      <td>Image</td>
-      <td><label>
-        <input type="file" name="file" />
-      </label></td>
-    </tr>
-    <tr>
-      <td>Email</td>
-      <td><label>
-        <input type="text" name="textfield5" />
-      </label></td>
-    </tr>
-    <tr>
-      <td colspan="2"><label>
-        <input type="submit" name="Submit" value="Submit" />
-      </label></td>
-    </tr>
-  </table>
+  <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">SubAdmin&nbsp;Name</label>
+		<div class="col-sm-12 col-md-10">
+			<input class="form-control" type="text" placeholder="Enter Name" name="textfield">
+		</div>
+  </div>
+  <div class="form-group row">
+	    <label class="col-sm-12 col-md-2 col-form-label">Gender</label>
+      <div class="custom-control custom-radio mb-6">
+					<input type="radio" id="customRadio4" name="r1" class="custom-control-input">
+					<label class="custom-control-label" for="customRadio4">Male</label>
+      </div>
+
+      <div class="custom-control custom-radio mb-6">
+					<input type="radio" id="customRadio5" name="r1" class="custom-control-input">
+					<label class="custom-control-label" for="customRadio5">Female</label>
+      </div>
+  </div>
+  <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">Place</label>
+		<div class="col-sm-12 col-md-10">
+			<input class="form-control" type="text" placeholder="Enter Place" name="textfield1">
+		</div>
+  </div>
+     <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">PIN</label>
+		<div class="col-sm-12 col-md-10">
+			<input class="form-control" type="number" placeholder="Enter PIN" name="textfield2">
+		</div>
+  </div>
+    <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">Post</label>
+		<div class="col-sm-12 col-md-10">
+			<input class="form-control" type="text" placeholder="Enter Post" name="textfield3">
+		</div>
+  </div>
+    <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">District</label>
+		<div class="col-sm-12 col-md-10">
+			<input class="form-control" type="text" placeholder="Enter District" name="textfield4">
+		</div>
+  </div>
+    <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">Image</label>
+		<div class="col-sm-12 col-md-10">
+			<input class="form-control" type="file"  name="file">
+		</div>
+  </div>
+    <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">Email</label>
+		<div class="col-sm-12 col-md-10">
+			<input class="form-control" type="email" placeholder="Enter Email Address" name="textfield5">
+		</div>
+  </div>
+    <div align="center">
+       <button type="submit" class="btn btn-outline-primary">Submit</button>
+
+  </div>
 </form>
-</body>
-</html>
+{% endblock %}
