--- a/earts/templates/admintemplates/admin_view_SubAdmin.html
+++ b/earts/templates/admintemplates/admin_view_SubAdmin.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Untitled Document</title></head>
-
-<body>
+{% extends 'admintemplates/index.html' %}
+{% block body %}
 <form id="form1" name="form1" method="post" action="/earts/admin_viewsubadminload/">
-  <table width="221" border="1">
+  <table width="221" class="table">
     <tr>
       <th colspan="10" scope="col">Sub&nbsp;Admin&nbsp;Name </th>
       <th width="17" scope="col"><label>
@@ -14,7 +9,8 @@
         <input type="submit" name="Submit" value="Search" />
       </label></th>
     </tr></table><br/>
-	<table border="1">
+	<table class="table">
+    <thead>
     <tr>
       <td width="15">#</td>
       <td width="15">Name</td>
@@ -27,7 +23,9 @@
       <td width="20">Email</td>
       <td>&nbsp;</td>
     </tr>
+    </thead>
         {% for i in data %}
+    <tbody>
     <tr>
       <td>{{ forloop.counter }} </td>
       <td>{{ i.subadmin_name }}</td>
@@ -40,9 +38,7 @@
       <td>{{ i.email }}&nbsp;</td>
       <td><a href="/earts/admin_deletesubadmin/{{ i.id }}">Delete</a></td>
       <td><a href="/earts/admin_editsubadminload/{{ i.id }}">Edit</a></td>
-    </tr>
+    </tr></tbody>
         {% endfor %}
   </table>
-</form>
-</body>
-</html>
+{% endblock %}
