--- a/earts/templates/admintemplates/admin_add_Event.html
+++ b/earts/templates/admintemplates/admin_add_Event.html
@@ -1,41 +1,33 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Untitled Document</title>
-</head>
+{% extends 'admintemplates/index.html' %}
 
-<body>
+
+{% block body %}
+<div class="main-container">
+<div class="card-box pd-20 height-100-p mb-30">
 <form action="/earts/admin_addeventpost/" method="post" enctype="multipart/form-data" name="form1" id="form1">
-  <table width="200" border="1">
-    <tr>
-      <td scope="col"><div align="left">Event&nbsp;Name </div>        </td>
-      <td scope="col">
-        <input type="text" name="textfield" />
-      </td>
-    </tr>
-    
-    <tr>
-      <td>Event&nbsp;Date</td>
-      <td>
-        <input type="date" name="textfield1" />
-      </td>
-    </tr>
-    
-    <tr>
-      <td> Event&nbsp;Discription</td>
-      <td>
-        <textarea name="textfield2"></textarea>
-      </td>
-    </tr>
-    
-    
-    <tr>
-      <td colspan="2">
-        <input type="submit" name="Submit" value="Submit" />
-      </td>
-    </tr>
-  </table>
+  <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">Event&nbsp;Name</label>
+		<div class="col-sm-12 col-md-10">
+			<input class="form-control" type="text" placeholder="Enter Event Name" name="textfield">
+		</div>
+  </div>
+  <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">Event Date</label>
+		<div class="col-sm-12 col-md-10">
+			<input class="form-control date-picker" placeholder="Select Date" type="text" name="textfield1">
+		</div>
+  </div>
+  <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">Event Discription</label>
+		<div class="col-sm-12 col-md-10">
+			<input class="form-control" type="text" placeholder="Enter Discriptions" name="textfield2">
+		</div>
+  </div>
+  <div align="center">
+       <button type="submit" class="btn btn-outline-primary">Submit</button>
+
+  </div>
+
 </form>
-</body>
-</html>
+</div></div>
+{% endblock %}
