--- a/earts/templates/admintemplates/admin_add_SubAdmin.html
+++ b/earts/templates/admintemplates/admin_add_SubAdmin.html
@@ -2,6 +2,8 @@
 
 
 {% block body %}
+<div class="main-container">
+<div class="card-box pd-20 height-100-p mb-30">
 <form action="/earts/admin_addsubadminpost/" method="post" enctype="multipart/form-data" name="form1" id="form1">
   <div class="form-group row">
 		<label class="col-sm-12 col-md-2 col-form-label">SubAdmin&nbsp;Name</label>
@@ -62,4 +64,5 @@
 
   </div>
 </form>
+</div></div>
 {% endblock %}
