--- a/earts/templates/programcommitteetemplates/procommittee_view_perfomance.html
+++ b/earts/templates/programcommitteetemplates/procommittee_view_perfomance.html
@@ -27,6 +27,7 @@
   </tr>
     {% endfor %}
    </table>
-    <a href="/earts/procommittee_saveresults/" >Save&nbsp;Result</a>
+    <button><a href="/earts/procommittee_saveresults/" >Save&nbsp;Result</a></button>
+    <button><a href="/earts/procommittee_publishresult/" >Publish&nbsp;Result</a></button>
 </body>
 </html>
