--- a/earts/templates/admintemplates/admin_home.html
+++ b/earts/templates/admintemplates/admin_home.html
@@ -1,6 +1,23 @@
 {% extends 'admintemplates/index.html' %}
 
-{% block body %}
+{% block home %}
+  <div class="pd-ltr-20">
+                         <div class="card-box pd-20 height-100-p mb-30">
+				<div class="row align-items-center">
+					<div class="col-md-4">
+						<img src="vendors/images/banner-img.png" alt="">
+					</div>
+					<div class="col-md-8">
+						<h4 class="font-20 weight-500 mb-10 text-capitalize">
+							Welcome back <div class="weight-600 font-30 text-blue">Admin!</div>
+						</h4>
+					</div>
+				</div>
+			</div>
+                        {% endblock %}
+
+
+<!--
 
 <table border="3">
     <tr>
@@ -34,5 +51,4 @@
     <tr>
         <th> <a href="/earts/loginload/">LOG OUT</a></th>
     </tr>
-</table>
-{% endblock %}
+-->
