--- a/earts/templates/admintemplates/admin_view_SubAdmin.html
+++ b/earts/templates/admintemplates/admin_view_SubAdmin.html
@@ -1,44 +1,65 @@
 {% extends 'admintemplates/index.html' %}
 {% block body %}
-<form id="form1" name="form1" method="post" action="/earts/admin_viewsubadminload/">
-  <table width="221" class="table">
-    <tr>
-      <th colspan="10" scope="col">Sub&nbsp;Admin&nbsp;Name </th>
-      <th width="17" scope="col"><label>
-        <input type="text" name="textfield" />
-        <input type="submit" name="Submit" value="Search" />
-      </label></th>
-    </tr></table><br/>
-	<table class="table">
-    <thead>
-    <tr>
-      <td width="15">#</td>
-      <td width="15">Name</td>
-      <td width="15">Gender</td>
-      <td width="15">Place</td>
-      <td width="15">PIN</td>
-      <td width="15">Post</td>
-      <td width="15">District</td>
-      <td width="15">Image</td>
-      <td width="20">Email</td>
-      <td>&nbsp;</td>
-    </tr>
-    </thead>
-        {% for i in data %}
-    <tbody>
-    <tr>
-      <td>{{ forloop.counter }} </td>
-      <td>{{ i.subadmin_name }}</td>
-      <td>{{ i.gender }}&nbsp;</td>
-      <td>{{ i.place }}&nbsp;</td>
-      <td>{{ i.pin  }}</td>
-      <td>{{ i.post }}&nbsp;</td>
-      <td>{{ i.district }}&nbsp;</td>
-      <td><img src="{{ i.image }}" width="100" height="100" ></td>
-      <td>{{ i.email }}&nbsp;</td>
-      <td><a href="/earts/admin_deletesubadmin/{{ i.id }}">Delete</a></td>
-      <td><a href="/earts/admin_editsubadminload/{{ i.id }}">Edit</a></td>
-    </tr></tbody>
-        {% endfor %}
-  </table>
+	<div class="mobile-menu-overlay"></div>
+
+	<div class="main-container">
+		<div class="pd-ltr-20 xs-pd-20-10">
+			<div class="min-height-200px">
+                <!-- Simple Datatable start -->
+				<div class="card-box mb-30">
+					<div class="pd-20">
+						<h4 class="text-blue h4">Sub Admin Table</h4>
+					</div>
+					<div class="pb-20">
+						<table class="data-table table stripe hover nowrap" style="width:1200px">
+							<thead>
+								<tr>
+                                  <th >#</th>
+                                     <th class="table-plus datatable-nosort">Name</th>
+                                        <th>Gender</th>
+                                          <th>Place</th>
+                                          <th>PIN</th>
+                                           <th>Post</th>
+                                           <th>District</th>
+                                           <th style="width:35px">Image</th>
+                                             <th style="width:49px">E-mail</th>
+                                            <th >Action</th>
+                                    </tr>
+							</thead> {% for i in data %}
+							<tbody>
+								<tr>
+									<td>{{ forloop.counter }} </td>
+                                    <td>{{ i.subadmin_name }}</td>
+                                    <td>{{ i.gender }}</td>
+                                    <td>{{ i.place }}</td>
+                                    <td>{{ i.pin  }}</td>
+                                    <td>{{ i.post }}</td>
+                                    <td>{{ i.district }}</td>
+                                    <td><img src="{{ i.image }}" width="100" height="100" ></td>
+                                    <td>{{ i.email }}</td>
+                                    <td>
+										<div class="dropdown">
+											<a class="btn btn-link font-24 p-0 line-height-1 no-arrow dropdown-toggle" href="#" role="button" data-toggle="dropdown">
+												<i class="dw dw-more"></i>
+											</a>
+											<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
+												<a class="dropdown-item" href="/earts/admin_editsubadminload/{{ i.id }}"><i class="dw dw-edit2"></i> Edit</a>
+												<a class="dropdown-item" href="/earts/admin_deletesubadmin/{{ i.id }}"><i class="dw dw-delete-3"></i> Delete</a>
+											</div>
+										</div>
+									</td>
+								</tr>
+
+							</tbody> {% endfor %}
+						</table>
+					</div>
+				</div>
+
+				<!-- Export Datatable End -->
+			</div>
+			<div class="footer-wrap pd-20 mb-20 card-box">
+                <a href="https://github.com/dropways" target="_blank"></a>
+			</div>
+		</div>
+	</div>
 {% endblock %}
